<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="voterInfo"
            type="com.example.android.politicalpreparedness.network.models.VoterInfoResponse" />

        <variable
            name="fragment"
            type="com.example.android.politicalpreparedness.election.VoterInfoFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{voterInfo.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="Tue Apr 07 00:00:00 EDT 2020" />

        <TextView
            android:id="@+id/state_header"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:onClickListener="@{() -> fragment.openUrl(voterInfo.state.get(0).electionAdministrationBody.electionInfoUrl)}"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClickListener="@{() -> fragment.openUrl(voterInfo.state.get(0).electionAdministrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClickListener="@{() -> fragment.openUrl(voterInfo.state.get(0).electionAdministrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:text="@string/correspondence_address"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            style="@style/PoliticalPreparedness.MaterialComponents.TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/button"
            style="@style/PoliticalPreparedness.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_padding"
            android:layout_marginEnd="@dimen/normal_padding"
            android:layout_marginBottom="@dimen/normal_padding"
            android:text="@string/follow_election"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>